@@ -32,8 +32,8 @@ import java.util.Arrays;
  *          necessary
  * @modules java.base/jdk.internal.util
  * @requires (sun.arch.data.model == "64" & os.maxMemory >= 8G)
- * @run main/othervm -Xms6G -Xmx6G -XX:+CompactStrings HugeCapacity true
- * @run main/othervm -Xms6G -Xmx6G -XX:-CompactStrings HugeCapacity false
+ * @run main/othervm -Xms8G -Xmx8G -XX:-CompactStrings -Xlog:gc HugeCapacity false
+ * @run main/othervm -Xms8G -Xmx8G -XX:+CompactStrings -Xlog:gc HugeCapacity true
  */
 
 public class HugeCapacity {
